<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#000000" android:gravity="top" android:text="@string/manual_request_title" />

	<Button android:id="@+id/manual_request_button" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="onManualRequestClick" android:text="@string/manual_request_button" />

	<EditText android:id="@+id/manual_request_path_text"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:textColor="#000000"
		android:maxLines="1" android:imeOptions="actionNext" />

	<EditText android:id="@+id/manual_request_params_text"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:textColor="#000000" android:hint="@string/params_hint"
		android:maxLines="1" android:imeOptions="actionNext" />

	<RadioGroup android:id="@+id/manual_request_method_radiogroup"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:orientation="vertical">
		
		<RadioButton android:id="@+id/manual_request_get_radio"			
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:text="@string/get_method" android:tag="GET"
			android:checked="true" />

		<RadioButton android:id="@+id/manual_request_post_radio"			
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:text="@string/post_method" android:tag="POST" />

		<RadioButton android:id="@+id/manual_request_put_radio"			
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:text="@string/put_method" android:tag="PUT"/>
		
		<RadioButton android:id="@+id/manual_request_delete_radio"			
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:text="@string/delete_method" android:tag="DELETE"/>
			
		<RadioButton android:id="@+id/manual_request_head_radio"			
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:text="@string/head_method" android:tag="HEAD"/>

		<RadioButton android:id="@+id/manual_request_patch_radio"			
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:text="@string/patch_method" android:tag="PATCH"/>
		
	</RadioGroup>


</LinearLayout>


