<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#000000" android:gravity="top" android:text="@string/delete_title" />

	<Button android:id="@+id/delete_button" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="onDeleteClick" android:text="@string/delete_button" />

	<EditText android:id="@+id/delete_object_type_text"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:textColor="#000000" android:hint="@string/object_type_hint"
		android:maxLines="1" android:imeOptions="actionNext" />

	<AutoCompleteTextView android:id="@+id/delete_object_id_text"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:textColor="#000000" android:hint="@string/object_id_hint"
		android:maxLines="1" android:imeOptions="actionDone"
		android:completionThreshold="1" />

</LinearLayout>
