<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#000000" android:gravity="top" android:text="@string/files_in_users_groups_title" />

	<Button android:id="@+id/files_in_users_groups_button" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="onFilesInUsersGroupsClick" android:text="@string/files_in_users_groups_button" />

	<EditText android:id="@+id/files_in_users_groups_user_or_group_id_text"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:textColor="#000000" android:hint="@string/user_or_group_id_hint"
		android:maxLines="1" android:imeOptions="actionNext" />

	<EditText android:id="@+id/files_in_users_groups_page_text"
		android:inputType="number"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:textColor="#000000" android:hint="@string/page_hint"
		android:maxLines="1" android:imeOptions="actionDone" />


</LinearLayout>


