<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="48dp"
	android:padding="3dp" android:background="#aaaaaa">

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_centerVertical="true"
		android:text="@string/explorer_title" android:textColor="#000000"
		android:layout_marginStart="3dp" />

	<Button
		android:id="@+id/dev_menu_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_centerVertical="true"
		android:onClick="onDevMenuClick"
		android:text="@string/dev_menu_button" />

	<Button android:id="@+id/clear_button" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_toStartOf="@id/dev_menu_button"
		android:layout_centerVertical="true" android:layout_marginEnd="3dp"
		android:onClick="onClearClick" android:text="@string/clear_button" />
	
	<Button android:id="@+id/print_info_button" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_toStartOf="@id/clear_button"
		android:layout_centerVertical="true" android:layout_marginEnd="3dp"
		android:onClick="onPrintInfoClick" android:text="@string/print_info_button" />

</RelativeLayout>
