<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#000000" android:gravity="top" android:text="@string/query_title" />

	<Button android:id="@+id/query_button" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="onQueryClick" android:text="@string/query_button" />

	<EditText android:id="@+id/query_soql_text" android:autoText="false"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:gravity="top" android:textColor="#000000" android:hint="@string/soql_hint"
		android:imeOptions="actionDone" />

</LinearLayout>


