<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#000000" android:gravity="top" android:text="@string/delete_file_share_title" />

	<Button android:id="@+id/delete_file_share_button" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="onDeleteFileShareClick" android:text="@string/delete_file_share_button" />

	<EditText android:id="@+id/delete_file_share_share_id_text"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:textColor="#000000" android:hint="@string/share_id_hint"
		android:maxLines="1" android:imeOptions="actionDone" />

</LinearLayout>


